@@ -32,8 +32,10 @@
 
 #include "libvo/fastmemcpy.h"
 
-#ifdef ARCH_X86_32
-#define CAN_COMPILE_X86_ASM
+#ifdef ARCH_X86_64
+// 3DNow! and 3DNow!Ext routines don't compile under AMD64
+#undef HAVE_3DNOW
+#undef HAVE_3DNOWEX
 #endif
 
 //static FILE* mp3_file=NULL;
@@ -137,7 +139,7 @@ LOCAL unsigned int getbits_fast(short number_of_bits)
 //  if(MP3_frames>=7741) printf("getbits_fast: bits=%d  bitsleft=%d  wordptr=%x\n",number_of_bits,bitsleft,wordpointer);
   if((bitsleft-=number_of_bits)<0) return 0;
   if(!number_of_bits) return 0;
-#if defined(CAN_COMPILE_X86_ASM)
+#ifdef ARCH_X86
   rval = bswap_16(*((uint16_t *)wordpointer));
 #else
   /*
@@ -180,7 +182,7 @@ LOCAL void set_pointer(int backstep)
 
 LOCAL int stream_head_read(unsigned char *hbuf,uint32_t *newhead){
   if(mp3_read(hbuf,4) != 4) return FALSE;
-#if defined(CAN_COMPILE_X86_ASM)
+#ifdef ARCH_X86
   *newhead = bswap_32(*((uint32_t*)hbuf));
 #else
   /*
@@ -415,8 +417,6 @@ void MP3_Init(){
 
     make_decode_tables(outscale);
 
-#ifdef CAN_COMPILE_X86_ASM
-
 #ifdef HAVE_MMX
     if (gCpuCaps.hasMMX)
     {
@@ -451,6 +451,7 @@ void MP3_Init(){
     }
     else
 #endif
+#ifdef ARCH_X86_32
 #ifdef HAVE_MMX
     if (gCpuCaps.hasMMX)
     {
@@ -465,7 +466,7 @@ void MP3_Init(){
 	mp_msg(MSGT_DECAUDIO,MSGL_V,"mp3lib: using Pentium optimized decore!\n");
     }
     else
-#endif
+#endif /* ARCH_X86_32 */
 #ifdef HAVE_ALTIVEC
     if (gCpuCaps.hasAltiVec)
     {
